# standard-post-piv

./: .gitignore  README.md  setup.cfg
h5postpiv/: notebook.py  plotting.py  report.py  statistics.py  xr_accessors.py
standardpostpiv/: __init__.py  _logging.py  _version.py  badge.py  core.py  displacement.py  flags.py  fov.py  logger.py  monitor_points.py  notebook.py  piv_mask.py  piv_vector.py  plotting.py  report.py  reports.py  standard_plots.py  standardplots.py  statistics.py  style.mplstyle  template_piv_post.ipynb  utils.py  velocity.py  velocity_gradients.py  xr_accessors.py  xr_accessory.py
standardpostpiv/depr/: __init__.py  _cfg.py  flags.py  monitor_points.py  piv_vector.py  report.py  utils.py  velocity.py  xr_accessors.py
standardpostpiv/depr/notebook/sections/: __init__.py  mean_velocity_in_moving_frame.py  misc.py
standardpostpiv/depr/notebook/sections/monitor/: __init__.py  plane.py  snapshot.py
standardpostpiv/notebook/: notebook.py  notebook_old.py  toc.py
standardpostpiv/notebook/sections/: __init__.py  cells.py  convergence.py  core.py  mean_velocity.py  mean_velocity_in_moving_frame.py  misc.py  statistics.py  title.py  velocity_plots.py
standardpostpiv/notebook_utils/: cells.py  section.py  toc.py
standardpostpiv/notebook_utils/pivreport_sections/: displacement.py  imports.py  monitor.py  normality.py  overview.py  pdfs.py  statistics.py
tests/: test_displacement.py  test_notebook.py  test_plotting.py  test_statistics.py  test_xr_accessor.py
