[metadata]
name = h5postpiv
version = 0.1.0
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Tool to post-process PIV data and store it in HDF5 format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/h5postpiv
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.8, <3.10
include_package_data = True
install_requires =
    appdirs>=1.4.4
    numpy>=1.20,<1.23.0
    h5py>=3.7.0
    matplotlib>=3.5.2
    h5rdmtoolbox @ git+https://github.com/matthiasprobst/h5RDMtoolbox@main
    pandas

notebook =
    jupyterlab
    nbformat
    nbconvert

test =
    %(notebook)s
    pylint
    pytest
    pytest-cov

complete =
    %(test)s

[tool:pytest]
python_files = test_*.py
testpaths = tests
