[metadata]
name = standardpostpiv
version = 0.1.0
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Tool to post-process PIV data stored in standardizes HDF5 files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/standard-post-piv
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.8, <3.10
include_package_data = True
install_requires =
    appdirs>=1.4.4
    numpy>=1.20,<1.23.0
    h5py>=3.7.0
    matplotlib>=3.5.2
    h5rdmtoolbox
    pandas
    ipywidgets
    IPython
    scipy
    jupyterlab
    nbformat
    nbconvert

test =
    pylint
    pytest
    pytest-cov

complete =
    %(test)s

[tool:pytest]
python_files = test_*.py
testpaths = tests
